--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ python = "^3.10"
 azure-functions = "1.23.0"
 streamlit = "1.46.1"
 python-dotenv = "1.1.1"
-azure-ai-formrecognizer = "3.3.3"
+azure-ai-documentintelligence = "1.0.0"
 azure-storage-blob = "12.20.0"
 azure-identity = "1.23.0"
 flask = {extras = ["async"], version = "^3.1.1"}
